[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/sections/hugo_section/HugoSection.gd" type="Script" id=2]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/settings_editors/SettingsPathSystemDir.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/CategoryOptionsLine.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/Collapsible.gd" type="Script" id=9]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/editor_button_theme.tres" type="Theme" id=12]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.0823529, 0.0784314, 0.0901961, 0.6 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.647059, 0.619608, 0.701961, 0.6 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.145098, 0.12549, 0.180392, 0.6 )

[node name="HugoSection" type="VBoxContainer"]
margin_right = 1018.0
margin_bottom = 216.0
custom_constants/separation = 8
script = ExtResource( 2 )
_category_options_packed_scene = ExtResource( 8 )

[node name="SectionTitle" type="Label" parent="."]
margin_right = 1018.0
margin_bottom = 14.0
text = "Export to Hugo Site Parameters"

[node name="SectionTitleBG" type="ColorRect" parent="SectionTitle"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 1, 1, 0.121569 )

[node name="ExportPathRow" type="HBoxContainer" parent="."]
margin_top = 22.0
margin_right = 1018.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="ExportPathRow"]
margin_right = 507.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
text = "Hugo content export folder path"
valign = 1

[node name="SettingsPathSystemDir" parent="ExportPathRow" instance=ExtResource( 3 )]
property = "_hugo_export_path"

[node name="Categories" type="Button" parent="."]
visible = false
margin_top = 52.0
margin_right = 1018.0
margin_bottom = 76.0
rect_min_size = Vector2( 250, 0 )
custom_colors/font_color_hover = Color( 0, 0.811765, 1, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.109804, 0.129412, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "- Categories Optional Data"
align = 0

[node name="Collapsible" type="Node" parent="Categories"]
script = ExtResource( 9 )
text_element_path = NodePath("..")
collapsible_node_path = NodePath("../../CategoriesBlockIdent")

[node name="CategoriesBlockIdent" type="MarginContainer" parent="."]
margin_top = 52.0
margin_right = 1018.0
margin_bottom = 52.0
custom_constants/margin_left = 30

[node name="CategoriesList" type="VBoxContainer" parent="CategoriesBlockIdent"]
margin_left = 30.0
margin_right = 1018.0

[node name="BuildCategoryDb" type="Button" parent="."]
margin_left = 768.0
margin_top = 60.0
margin_right = 1018.0
margin_bottom = 89.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 8
theme = ExtResource( 12 )
text = "Build Category Db"

[node name="ExportHugoContent" type="Button" parent="."]
margin_left = 768.0
margin_top = 97.0
margin_right = 1018.0
margin_bottom = 126.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 8
theme = ExtResource( 12 )
text = "Export Hugo Docs Pages"

[connection signal="focus_entered" from="." to="." method="_on_HugoSection_focus_entered"]
[connection signal="pressed" from="BuildCategoryDb" to="." method="_on_BuildCategoryDb_pressed"]
[connection signal="pressed" from="ExportHugoContent" to="." method="_on_ExportHugoContent_pressed"]
